objects/TOMCAT/tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tomcat8-portic
    app.kubernetes.io/component: tomcat8-portic
    app.kubernetes.io/instance: tomcat8-portic
    app.kubernetes.io/name: tomcat8-portic
  name: tomcat8-portic
  namespace: portic-devops
spec:
  clusterIP: 10.217.5.161
  clusterIPs:
  - 10.217.5.161
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 3004-tcp
    port: 3004
    protocol: TCP
    targetPort: 3004
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deployment: tomcat8-portic
  sessionAffinity: ClientIP
  type: ClusterIP
status:
  loadBalancer: {}
