objects/TOMCAT/route-tomcat8.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tomcat8-portic
  namespace: portic-devops
spec:
  host: tomcat.carles.cat
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: tomcat8-portic
    weight: 100
  wildcardPolicy: None
